# mypkg

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: test.yml
.github/workflows/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
.github/workflows/log/: latest_build
install/: local_setup.sh  setup.sh
install/mypkg/lib/mypkg/: listener  talker
install/mypkg/share/mypkg/: package.dsv  package.ps1  package.sh  package.xml  talk_listen.launch.py
log/: latest_build
mypkg/: listener.py  talker.py
person_msgs/: CMakeLists.txt  package.xml
person_msgs/srv/: Query.srv
test/: test.bash  test_listener.py  test_talker.py
