<?xml version="1.0"?>
<package format="3">
  <name>person_msgs</name>
  <version>0.0.0</version>
  <description>Custom message and service definitions for person information</description>
  <maintainer email="abannofabiao@gmail.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

